<resources>
    <string name="app_name">FirstResponse</string>
    <string name="about_us">About Us</string>
    <string name="website">Website</string>
    <string name="url">https://redcrosskarnataka.org/</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="choose_language">Choose Language</string>
    <string name="seizure2">A seizure can be caused by many things. These can include:
        \n<b>■</b> An imbalance of nerve-signaling brain chemicals (neurotransmitters)
        \n<b>■</b> Brain tumor
        \n<b>■</b> Stroke
        \n<b>■</b> Brain damage from illness or injury
        \nEpilepsy may be caused by a combination of these. In most cases, the cause of epilepsy can’t be found.</string>
    <string name="seizure3">"Your symptoms depend on the type of seizure. General symptoms or warning signs of a seizure can include:
\n<b>■</b> Staring
\n<b>■</b> Jerking movements of the arms and legs
\n<b>■</b> Stiffening of the body
\n<b>■</b> Loss of consciousness
\n<b>■</b> Breathing problems or stopping breathing
\n<b>■</b> Loss of bowel or bladder control
\n<b>■</b> Falling suddenly for no apparent reason,especially when associated with loss of consciousness
\n<b>■</b> Not responding to noise or words for brief periods
\n<b>■</b> Appearing confused or in a haze
\n<b>■</b> Nodding your head rhythmically, when associated with loss of awareness or loss of consciousness
\n<b>■</b> Periods of rapid eye blinking and staring"</string>
    <string name="seizure4">The goal of treatment is to control, stop, or reduce how often seizures occur. Treatment is most often done with medicine. There are many types of medicines used to treat epilepsy. Your healthcare provider will need to identify the type of seizure you are having. Medicines are selected based on the type of seizure, age of the person, side effects, cost, and ease of use.\n
        \n<b>1.</b> Blood tests
        \n<b>2.</b> Urine tests
        \n<b>3.</b> Electroencephalogram (EEG)
        \n<b>4.</b> Vagus Nerve Stimulation (VNS)
        \n<b>5.</b> Surgery"</string>
    <string name="earth_para1">An earthquake is a sudden shaking of Earth\'s surface caused by the movement of rocks deep underneath.
        Most quakes are unnoticeable by people on Earth\'s surface. Thousands of quakes occur every day but are too weak to be felt.

    </string>
    <string name="earth_para2"><b>■Plate tectonics</b> - The Earth\’s outermost layer is fragmented into about 15 major slabs called tectonic plates. These slabs form the lithosphere, which is comprised of the crust (continental and oceanic) and the upper part of the mantle. Tectonic plates move very slowly relative to each other, typically a few centimetres per year, but this still causes a huge amount of deformation at the plate boundaries, which in turn results in earthquakes.\n
       \n<b>■Elastic rebound theory</b> - Before an earthquake, the buildup of stress in the rocks on either side of a fault results in gradual deformation. Eventually, this deformation exceeds the frictional force holding the rocks together and sudden slip occurs along the fault. This releases the accumulated stress and the rocks on either side of the fault return to their original shape (elastic rebound) but are offset on either side of the fault.\n
    </string>
    <string name="earth_indoor"><b>Drop, Cover, and Hold On:</b> <b>Drop</b> to your hands and knees to prevent falling. <b>Cover</b> your head and neck (and entire body if possible) under a sturdy piece of furniture like a table or desk. <b>Hold</b> On to the furniture to keep it in place until the shaking stops.\n<b>Stay away from windows, glass, and exterior walls:</b> These can break or collapse, causing injury.\n<b>Do not run outside:</b> It’s often safer to stay indoors because falling debris can be hazardous near buildings.\n<b>Avoid elevators:</b> If the power goes out or the building is damaged, elevators can become trapped.\n
    </string>
    <string name="earth_outdoor"><b>Move away from buildings, trees, streetlights, and utility wires:</b> These structures can collapse or break during an earthquake.\n<b>Find an open space:</b> Stay in an open area until the shaking stops.\n<b>Drop to the ground:</b> Stay low to reduce the risk of being knocked down by the shaking.\n
    </string>
    <string name="earth_vehicle"><b>Pull over:</b> Stop as quickly and safely as possible, avoiding overpasses, bridges, or power lines.\n<b>Stay inside the vehicle:</b> The vehicle can offer protection from falling debris.\n<b>Avoid parking near buildings, trees, or large signs:</b> These could collapse onto your vehicle.\n<b>Proceed cautiously:</b> After the shaking stops, drive carefully, watching for road damage or hazards.\n
    </string>
    <string name="earth_building"><b>Stay inside:</b> Do not use elevators. Find cover under sturdy furniture.\n<b>Move away from windows and outside walls:</b> These are prone to shattering or collapsing.\n
    </string>
    <string name="earth_coast"><b>Be aware of tsunamis:</b> Earthquakes near coastlines can trigger tsunamis. After the shaking stops, move to higher ground as quickly as possible if you are near the ocean.\n
    </string>
    <string name="earth_afterearthquake"><b>Be prepared for aftershocks:</b> These smaller tremors can happen minutes or even days after the main quake.\n<b>Check for injuries and hazards:</b> Once the shaking stops, check yourself and others for injuries. Look for fire hazards like gas leaks or broken electrical wires.\n<b>Stay tuned to news or alerts:</b> Use a radio or mobile device (if available) to listen for emergency updates and instructions.\n
    </string>
    <string name="epi_para1">An epidemic is a sudden disease outbreak that affects a large number of people in a particular region, community, or population.
        \nAn epidemic of an infectious disease can happen if the virus, bacteria, or other cause of the disease has recently grown stronger, is introduced somewhere it has never been before, or finds new ways to enter the bodies of those it is affecting. It also can happen if people somehow grow more susceptible to the cause of the disease or have greater exposure to it.
        \nEpidemics typically are classified as common-source or propagated. A disease is labeled one or the other based on the way it spreads through a group of people.

    </string>
    <string name="epi_para2">An <b>EPIDEMIC</b> involves the wide-ranging spread of a disease throughout an entire area or particular community where it’s not permanently prevalent. <b>PANDEMIC</b> involves an even wider spread, often reaching across the entire world. The word <b>ENDEMIC</b> is used to describe a disease that persistently and regularly spreads within a particular area or region (that is, it never fully goes away).

    </string>
    <string name="trauma_informed_care">Trauma-informed care is an approach that recognizes the impact of trauma and integrates this awareness into care practices. Its importance lies in creating a safe, supportive environment that prevents re-traumatization and fosters healing. By prioritizing trust, empowerment, and understanding, trauma-informed care improves outcomes and encourages individuals to engage in their recovery.
    </string>
    <string name="trauma_informed_care1"><b>Ensure physical and emotional safety:</b> Create an environment where individuals feel safe, both physically and emotionally, to foster trust and reduce anxiety.\n<b>Build trust and transparency:</b> Communicate clearly and openly to develop a trusting relationship between caregivers and individuals.\n<b>Provide choice and empowerment:</b> Give individuals control over their care decisions and offer choices, helping them feel empowered and respected.\n<b>Collaborate and share power:</b> Work together with individuals, respecting their autonomy and input in the treatment process.\n<b>Recognize cultural, historical, and gender factors:</b> Be aware of cultural backgrounds and past experiences, including historical trauma, to offer more personalized care.\n<b>Understand trauma’s widespread impact:</b> Recognize that trauma affects everyone differently and can have a deep impact on emotional and physical well-being.\n<b>Avoid re-traumatization:</b> Ensure practices and interactions don’t unintentionally trigger or worsen an individual’s trauma.\n
    </string>
    <string name="blister">A blister is a small pocket of fluid that forms on the upper layers of the skin, typically due to friction, heat, or chemical exposure. Blisters act as a protective barrier, allowing the skin underneath to heal. The fluid inside is usually clear, but in some cases, it can contain blood if small blood vessels are damaged, or pus if the blister becomes infected. </string>
    <string name="blister_cause"><b>Friction:</b> Repeated rubbing of the skin, such as from poorly fitting shoes, can cause friction blisters.\n<b>Burns:</b> Exposure to heat, including sunburns, can lead to the formation of blisters.\n<b>Chemical Exposure:</b> Certain irritants or chemicals can cause blisters when they come into contact with the skin.\n<b>Medical Conditions:</b> Some conditions, like chickenpox or eczema, can cause blisters as part of their symptoms.\n
    </string>
    <string name="blister1"><b>Leave the blister intact:</b> If the blister is small and not too painful, it is best to leave it alone. The blister acts as a natural barrier to infection, and the fluid inside promotes healing. Cover it with a clean, loose bandage or blister pad to protect it from further friction.\n<b>Do not pop the blister:</b> Popping a blister can increase the risk of infection. If the blister is large, painful, or in a location where it’s likely to burst, you can consult a healthcare professional for advice.\n<b>Clean the area:</b> If the blister bursts, wash the area with soap and water to reduce the risk of infection. Gently pat the area dry and apply an antibiotic ointment to protect the skin.\n<b>Cover with a bandage:</b> Use a sterile bandage or blister pad to protect the area. Change the bandage daily or if it becomes wet or dirty.\n<b>Pain relief:</b> Over-the-counter pain relievers like ibuprofen can help reduce pain and inflammation associated with a blister.\n<b>Watch for infection:</b> Signs of infection include redness, warmth, increased pain, and yellow or green discharge. If these symptoms occur, seek medical attention.\n
    </string>
    <string name="blister2">Blisters usually heal on their own in a few days, but proper care can help speed recovery and prevent complications.
    </string>
        <string name="home">Home</string>
    <string name="location_t">Location</string>
    <string name="login_t">Profile</string>
    <string name="language_t">Language</string>
    <string name="credits_t">Credits</string>
    <string name="suggestions_t">Suggestions</string>
    <string name="musclet2">Causes:</string>
    <string name="blistert1">WHAT IS A BLISTER</string>
    <string name="blistert2">HOW TO HANDLE \nBLISTER</string>
    <string name="traumat1">WHAT IS A TRAUMA\n-INFORMED CARE?</string>
    <string name="traumat2">WAYS TO IMPLEMENT \nTRAUMA-INFORMED \nCARE</string>
    <string name="turn_on">TURN ON</string>
    <string name="turn_off">TURN OFF</string>
    <string name="strobe">STROBE</string>
    <string name="sos">SOS</string>
    <string name="sos_with_alarm">SOS WITH ALARM</string>
    <string name="stop">STOP</string>
</resources>