<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item android:title="@string/home"
            android:id="@+id/sideHome"
            android:icon="@drawable/ic_baseline_home_24" />

        <item android:title="@string/login_t"
            android:id="@+id/login"
            android:icon="@drawable/ic_user" />

        <item android:title="@string/location_t"
            android:id="@+id/location"
            android:icon="@drawable/ic_baseline_location_on_24" />

        <item android:title="@string/language_t"
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24" />

        <item android:title="@string/credits_t"
            android:id="@+id/credits"
            android:icon="@drawable/ic_baseline_info_24" />

        <item android:title="@string/suggestions_t"
            android:id="@+id/suggestions"
            android:icon="@drawable/baseline_attach_email_24" />



    </group>

</menu>
