<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/customToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:contentInsetStartWithNavigation="0dp"
        android:layout_marginTop="8dp"
        app:navigationIcon="@drawable/back"
        app:titleTextAppearance="@style/CustomToolbarTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="82dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/customToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_flashlight_on"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/turn_on"
            android:background="@drawable/button_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_bold" />

        <Button
            android:id="@+id/btn_flashlight_off"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/turn_off"
            android:background="@drawable/button_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/btn_flashlight_strobe"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/strobe"
            android:background="@drawable/button_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/btn_flashlight_sos"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/sos"
            android:background="@drawable/button_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btn_flashlight_alarm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/button_background"
            android:text="@string/sos_with_alarm"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_flashlight_stop"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/stop"
            android:background="@drawable/button_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
